--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         }
         .advice{
             margin: 0%;
-            width: 60%;
+            margin-left: 5%;
+            margin-right: 5%;
             font-size: x-large;
         }
         .advice p{
@@ -168,7 +169,7 @@
     <div class="foot">
         <footer>
             <h3>About US</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, libero.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur</p>
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem, ipsum dolor.</p>
         </footer>
