--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             width: 15px;
         } */
         .navigation #search{
-            display: inline;
             color: chocolate;
             font-family: 'Supermercardo one',cursive;
             font-size:medium;
-            padding-left : 6%;
+            padding-left : 3%;
+            padding-right: 3%;
             margin : -1%;
-            border : 2px solid rosybrown;
-            border-radius : 100%;
+            border : 3px solid rgba(188, 143, 143, 0.788);
+            border-radius : 35%;
             text-align:left;
             align-self: start;
         }
@@ -64,6 +64,7 @@
             width: 405px;
             height: 300px;
             padding: 0.5%;
+            transition: all 1s ease-in-out;
         }
         .latestrec h3{
             color: black;
@@ -75,6 +76,9 @@
             float: left;
             width:100%;
             height:90%;
+        }
+        .latestrec:hover{
+            transform: scale(1.1);
         }
         .advsec{
             border: 5px solid violet;
